split input to display previous input and operator

--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -6,7 +6,7 @@
     height: 4em;
     outline: 1px solid #888;
     color: white;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding: 0.5em;
     font-weight: bold;
     font-size: 1.5em;
